<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="action_add_project">Add Project</string>
	<string name="action_author">Author</string>
	<string name="action_blame">Blame</string>
	<string name="action_branches">Branches…</string>
	<string name="action_checkout">Checkout</string>
	<string name="action_clone">Clone</string>
	<string name="action_close_branches">Close Branches</string>
	<string name="action_commit">Commit</string>
	<string name="action_create_branch">Create</string>
	<string name="action_delete">Delete</string>
	<string name="action_delete_branch">Delete</string>
	<string name="action_delete_file">Delete</string>
	<string name="action_delete_project">Delete Project</string>
	<string name="action_delete_projects">Delete Projects</string>
	<string name="action_diff_file">Differences</string>
	<string name="action_edit_project">Edit Project</string>
	<string name="action_fetch">Fetch</string>
	<string name="action_files">Files…</string>
	<string name="action_help">Help</string>
	<string name="action_log">Log</string>
	<string name="action_manage_remotes">Remotes</string>
	<string name="action_merge">Merge</string>
	<string name="action_new_file">New File…</string>
	<string name="action_new_folder">New Folder…</string>
	<string name="action_open_branches">Open Branches</string>
	<string name="action_preferences">Preferences</string>
	<string name="action_pull">Pull</string>
	<string name="action_push">Push</string>
	<string name="action_refresh_projects">Refresh Projects</string>
	<string name="action_remotes">Remotes…</string>
	<string name="action_remove_file">Remove</string>
	<string name="action_revert">Revert</string>
	<string name="action_revert_file">Revert</string>
	<string name="action_search">Search…</string>
	<string name="action_select_all">Select All</string>
	<string name="action_sort_files">Sort…</string>
	<string name="action_stage_file">Stage</string>
	<string name="action_stash">Stash…</string>
	<string name="action_stash_apply">Apply</string>
	<string name="action_stash_create">Save</string>
	<string name="action_stash_list">List</string>
	<string name="action_tag">Tags…</string>
	<string name="action_tag_create">Create…</string>
	<string name="action_tag_list">List…</string>
	<string name="action_tag_push">Push…</string>
	<string name="action_unstage_file">Unstage</string>
	<string name="app_name">Pocket Git</string>
	<string name="button_apply">Apply</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_checkout">Checkout</string>
	<string name="button_clone">Clone</string>
	<string name="button_close">Close</string>
	<string name="button_commit">Commit</string>
	<string name="button_create">Create</string>
	<string name="button_delete">Delete</string>
	<string name="button_drop">Drop</string>
	<string name="button_fetch">Fetch</string>
	<string name="button_keep">Keep</string>
	<string name="button_merge">Merge</string>
	<string name="button_ok">OK</string>
	<string name="button_pull">Pull</string>
	<string name="button_push">Push</string>
	<string name="button_push_tags">Push Tags</string>
	<string name="button_revert">Revert</string>
	<string name="button_save">Save</string>
	<string name="button_select">Select</string>
	<string name="character_counter_pattern">%1$d / %2$d</string>
	<string name="hint_author">Your name</string>
	<string name="hint_commit_message">Type your commit message here</string>
	<string name="hint_email">Your e-mail</string>
	<string name="hint_stash_message">Optional stash message here</string>
	<string name="hint_tag_message">Optional tag message here</string>
	<string name="hint_tag_name">Tag name</string>
	<string name="label_authentication">Authentication</string>
	<string name="label_author">author</string>
	<string name="label_author_name">Author</string>
	<string name="label_branches">Branches</string>
	<string name="label_changes">Changes</string>
	<string name="label_commit">commit</string>
	<string name="label_date">date</string>
	<string name="label_email">Email</string>
	<string name="label_fetch">Fetch</string>
	<string name="label_files">Files</string>
	<string name="label_folder">Folder</string>
	<string name="label_folder_name">Folder Name</string>
	<string name="label_information">Information</string>
	<string name="label_local_path">Local Path</string>
	<string name="label_message">Message</string>
	<string name="label_password">Password</string>
	<string name="label_private_key">Private Key</string>
	<string name="label_project_name">Project Name</string>
	<string name="label_push">Push</string>
	<string name="label_refspec">RefSpec</string>
	<string name="label_refspecs">RefSpecs</string>
	<string name="label_remote_name">Remote Name</string>
	<string name="label_remote_url">Url</string>
	<string name="label_repository_url">Clone URL</string>
	<string name="label_save_password">Save Password</string>
	<string name="label_select_remote">Select Remote</string>
	<string name="label_staged">Staged</string>
	<string name="label_unstaged">Unstaged</string>
	<string name="label_url">Url</string>
	<string name="label_username">Username</string>
	<string name="message_ask_when_needed">Ask when needed…</string>
	<string name="message_clone_now">Repository not cloned yet. Do you want to clone it now?</string>
	<string name="message_clone_repository">Clone Repository</string>
	<string name="message_commit">Enter the commit message</string>
	<string name="message_delete_files">Delete project files?</string>
	<string name="message_delete_project">Delete project?</string>
	<string name="message_delete_stash">Delete stash after applying?</string>
	<string name="message_include_untracked">Include untracked</string>
	<string name="message_project_import">If not set, creates or imports…</string>
	<string name="search_menu_title">Search</string>
	<string name="status_bar_notification_info_overflow">999+</string>
	<string name="title_activity_blame">Blame</string>
	<string name="title_activity_commit">Commit</string>
	<string name="title_activity_diff">Differences</string>
	<string name="title_activity_file_picker">Select File</string>
	<string name="title_activity_files">Files</string>
	<string name="title_activity_folder_picker">Select Folder</string>
	<string name="title_activity_help">Help</string>
	<string name="title_activity_log">Log</string>
	<string name="title_activity_preferences">Preferences</string>
	<string name="title_activity_project">Project</string>
	<string name="title_activity_remote">Edit Remote</string>
	<string name="title_activity_remotes">Manage Remotes</string>
	<string name="title_author_data">Author Information</string>
	<string name="title_commit">Commit</string>
	<string name="title_dialog_fetch">Fetch</string>
	<string name="title_dialog_pull">Pull</string>
	<string name="title_dialog_push">Push</string>
	<string name="title_dialog_tag">Tag</string>
</resources>
