<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:aapt="http://schemas.android.com/aapt">
	<item
		android:icon="@drawable/ic_action_branches"
		android:title="@string/action_branches"
		app:showAsAction="always">
		<menu>
			<item
				android:icon="@drawable/ic_action_merge"
				android:id="@+id/action_merge"
				android:title="@string/action_merge"/>
			<item
				android:icon="@drawable/ic_action_create_branch"
				android:id="@+id/action_create_branch"
				android:title="@string/action_create_branch"/>
			<item
				android:icon="@drawable/ic_action_delete_branch"
				android:id="@+id/action_delete_branch"
				android:title="@string/action_delete_branch"/>
			<item
				android:icon="@drawable/ic_action_reset"
				android:id="@+id/action_revert"
				android:title="@string/action_revert"/>
		</menu>
	</item>
	<item
		android:icon="@drawable/ic_action_remotes"
		android:title="@string/action_remotes"
		app:showAsAction="always">
		<menu>
			<item
				android:icon="@drawable/ic_action_push"
				android:id="@+id/action_push"
				android:title="@string/action_push"/>
			<item
				android:icon="@drawable/ic_action_pull"
				android:id="@+id/action_pull"
				android:title="@string/action_pull"/>
			<item
				android:icon="@drawable/ic_action_fetch"
				android:id="@+id/action_fetch"
				android:title="@string/action_fetch"/>
			<item
				android:icon="@drawable/ic_action_manage"
				android:id="@+id/action_manage_remotes"
				android:visible="true"
				android:title="@string/action_manage_remotes"/>
		</menu>
	</item>
	<item
		android:icon="@drawable/ic_action_search"
		android:id="@+id/search_view"
		android:title="@string/action_search"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="never|ifRoom|collapseActionView"/>
	<item
		android:icon="@drawable/ic_action_files"
		android:title="@string/action_files"
		app:showAsAction="never">
		<menu>
			<item
				android:icon="@drawable/ic_action_add_file"
				android:id="@+id/action_new_file"
				android:title="@string/action_new_file"/>
			<item
				android:icon="@drawable/ic_action_add_folder"
				android:id="@+id/action_new_folder"
				android:title="@string/action_new_folder"/>
			<item
				android:icon="@drawable/ic_action_sort_files"
				android:id="@+id/action_sort_files"
				android:title="@string/action_sort_files"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_stash"
		android:title="@string/action_stash"
		app:showAsAction="never">
		<menu>
			<item
				android:icon="@drawable/ic_action_stash_list"
				android:id="@+id/action_stash_list"
				android:title="@string/action_stash_list"/>
			<item
				android:icon="@drawable/ic_action_stash"
				android:id="@+id/action_stash_create"
				android:title="@string/action_stash_create"/>
			<item
				android:icon="@drawable/ic_action_stash_apply"
				android:id="@+id/action_stash_apply"
				android:title="@string/action_stash_apply"/>
		</menu>
	</item>
	<item
		android:id="@+id/action_tag"
		android:title="@string/action_tag"
		app:showAsAction="never">
		<menu>
			<item
				android:icon="@drawable/ic_action_tag_list"
				android:id="@+id/action_tag_list"
				android:title="@string/action_tag_list"/>
			<item
				android:icon="@drawable/ic_action_tag_create"
				android:id="@+id/action_tag_create"
				android:title="@string/action_tag_create"/>
			<item
				android:icon="@drawable/ic_action_tag_push"
				android:id="@+id/action_tag_push"
				android:title="@string/action_tag_push"/>
		</menu>
	</item>
	<item
		android:icon="@drawable/ic_action_log"
		android:id="@+id/action_log"
		android:title="@string/action_log"
		app:showAsAction="ifRoom"/>
	<item
		android:icon="@drawable/ic_action_author"
		android:id="@+id/action_author"
		android:title="@string/action_author"
		app:showAsAction="never"/>
	<item
		android:icon="@drawable/ic_action_help"
		android:id="@+id/action_help"
		android:title="@string/action_help"
		app:showAsAction="never"/>
</menu>
