<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/layout_project" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/widget_toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_project_name"/>
            <EditText android:id="@+id/edit_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text">
                <requestFocus/>
            </EditText>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/label_repository_url"/>
            <EditText android:id="@+id/edit_url" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textUri"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/label_local_path"/>
            <EditText android:id="@+id/edit_local_path" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textVisiblePassword"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/label_authentication"/>
            <Spinner android:id="@+id/spinner_authentication" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:id="@+id/label_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/label_username"/>
            <EditText android:id="@+id/edit_username" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textVisiblePassword"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:id="@+id/label_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/label_password"/>
            <EditText android:id="@+id/edit_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/message_ask_when_needed" android:inputType="textPassword"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:id="@+id/label_private_key" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/label_private_key"/>
            <EditText android:id="@+id/edit_private_key" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textVisiblePassword"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
