<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/widget_toolbar"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?attr/colorOnSurface" android:ellipsize="end" android:id="@+id/text_message_short" android:background="?attr/colorPrimaryContainer" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:lines="1"/>
        <GridLayout android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:columnCount="3">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_information" android:layout_columnSpan="2"/>
            <ImageView android:layout_gravity="end" android:id="@+id/image_photo" android:layout_width="70dp" android:layout_height="70dp" android:layout_margin="5dp" android:layout_rowSpan="4"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4dp" android:text="@string/label_commit"/>
            <TextView android:id="@+id/text_commit" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4dp" android:text="@string/label_author"/>
            <TextView android:id="@+id/text_author" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4dp" android:text="@string/label_date"/>
            <TextView android:id="@+id/text_date" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </GridLayout>
        <LinearLayout android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_message"/>
            <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/text_message_complete" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </ScrollView>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="?attr/colorSurfaceVariant" android:padding="8dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_changes"/>
            <ListView android:id="@+id/list_differences" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
