<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/layout_project" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="italic" android:textColor="#999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_refspec"/>
        <EditText android:id="@+id/edit_refspec" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text">
            <requestFocus android:layout_width="wrap_content"/>
        </EditText>
    </LinearLayout>
    <RadioGroup android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp">
        <RadioButton android:id="@+id/radio_fetch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/label_fetch"/>
        <RadioButton android:id="@+id/radio_push" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_push"/>
    </RadioGroup>
</LinearLayout>
