<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/widget_toolbar"/>
    <LinearLayout android:id="@+id/parent_folder" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_up" android:contentDescription="@string/label_folder"/>
        <TextView android:textAppearance="?android:attr/textAppearance" android:gravity="center_vertical" android:id="@+id/parent_name" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <ListView android:id="@+id/list_folders" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
    <LinearLayout android:gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/button_cancel" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/button_cancel" android:layout_weight="1" style="?android:attr/buttonBarButtonStyle"/>
        <Button android:id="@+id/button_select" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/button_select" android:layout_weight="1" style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
